# brokerX

./: .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  flake.nix
.github/workflows/: bump.yml  ci.yml
app/: CHANGELOG.md  Cargo.toml
app/src/: config.rs  logging.rs  main.rs
app/src/api/: mod.rs  order.rs  user.rs
app/src/api/order/: mod.rs  tests.rs
app/src/api/user/: mod.rs  tests.rs
app/src/services/: mod.rs
app/src/web/: auth.rs  handlers.rs  jwt.rs  mod.rs  templates.rs
app/templates/: accounts.html  base.html  dashboard.html  deposit.html  login.html  mfa_verify.html  order_confirmation.html  orders.html  place_order.html  register.html  registration_verify.html
benchmark/: Cargo.toml
benchmark/src/: main.rs
database_adapter/: Cargo.toml
database_adapter/src/: db.rs  lib.rs  tests.rs
docs/adr/: adr001.md  adr002.md  adr003.md  adr004.md  adr005.md
docs/arc42/: README.md  activity.pintora  complete_user_journey.pintora  deployment_view.pintora  docs.md  level1_context.pintora  level2_domain.pintora  level3_ports_adapters.pintora  level4_modules.pintora  order_processing_detail.pintora  uc01_registration_flow.pintora  uc03_deposit_flow.pintora
docs/src/: main.typ  template.typ
domain/: Cargo.toml
domain/src/: account.rs  core.rs  lib.rs  mfa.rs  mfa_factory.rs  order.rs  order_processing.rs  portfolio.rs  pre_trade.rs  user.rs
in_memory_adapter/: Cargo.toml
in_memory_adapter/src/: lib.rs
mfa_adapter/: Cargo.toml
mfa_adapter/src/: lib.rs  mfa.rs  tests.rs
