[workspace]
members = [ "app", "database_adapter","domain", "in_memory_adapter", "mfa_adapter", "benchmark" ]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/louis-thevenet/brokerX"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"

[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
