[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
domain = { path = "../domain" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
askama_axum = "0.4"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
