[package]
name = "app"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
color-eyre = "0.6.5"
domain = { path = "../domain" }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
askama_axum = "0.4"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
# API Documentation & Validation
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.145"
utoipa-axum = "0.2.0"
axum = "0.8.6"
