[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
database_adapter = { path = "../database_adapter" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
hdrhistogram = "7.5"
clap = { version = "4", features = ["derive"] }
