[package]
name = "database_adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
tokio = {version="1.47.1", features=["full"]}
uuid = {version="1.18.1", features=["v4", "serde"]}
