[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.5"
database_adapter = { path = "../database_adapter" }
mfa_adapter = { path = "../mfa_adapter" }
rand = "0.9.2"
uuid = {version="1.18.1", features=["v4"]}
async-trait = "0.1"
tracing = "0.1.41"
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
